2021-02-24 Version 1.138.0: Checks for TLS renegotiation
2021-02-18 Version 1.137.0: Added  the --url option to specify the URL for the HTTP request
2021-02-16 Version 1.136.0: Fixed the signed certificate timestamps spelling (command line option)
2021-01-28 Version 1.135.0: Checks for signed certificate timestamps (SCTs)
2021-01-27 Version 1.134.0: Complete support for Alpine Linux and BusyBox
2021-01-26 Version 1.133.0: Added the --date option to specify the date binary
                            support for BusyBox date
2021-01-18 Version 1.132.0: Timeouted subprocesses can now be interrupted
                            Revokation via CRL can be checked with the --crl option
			    Better error messages for DH with small keys and handshake failures
2021-01-15 Version 1.131.0: OCSP check on all the chain elements
2021-01-14 Version 1.130.0: Retries when SSL Labs has no available slot
2020-12-24 Version 1.129.0: Bug fix in the proxy parameters handling
2020-12-22 Version 1.128.0: Added --no-proxy to ignore proxy settings
2020-12-21 Version 1.127.0: Better handling of certificates without CN in the subject
2020-12-16 Version 1.126.0: Corrected the handling of old nmap versions
2020-12-11 Version 1.125.0: Corrected the handling of the issuer URI
2020-11-31 Version 1.124.0: Bug fix when using a proxy
2020-11-30 Version 1.123.0: Enhancement: option to check the nth element
2020-08-07 Version 1.122.0: Bug fix, --skip-element and --custom-header
2020-07-24 Version 1.121.0: Bug fix release
2020-07-02 Version 1.120.0: MySQL support
2020-07-01 Version 1.119.0: Bug fix release
2020-06-12 Version 1.118.0: Bug fix release
2020-06-09 Version 1.117.0: Fixed a bug in the output (expiration date of chain elements)
2020-06-05 Version 1.116.0: Supports s_client -proxy option
2020-06-04 Version 1.115.0: Checks all the certificates in the chain
                            New option to check that the issuer does not match a given pattern