@@ -19,7 +19,7 @@
 ################################################################################
 # Constants
 
-VERSION=1.138.0
+VERSION=1.139.0
 SHORTNAME="SSL_CERT"
 
 VALID_ATTRIBUTES=",startdate,enddate,subject,issuer,modulus,serial,hash,email,ocsp_uri,fingerprint,"
@@ -2639,7 +2639,10 @@ main() {
         
         verboselog "Checking TLS renegotiation"
 
-        if ascii_grep '^Secure\ Renegotiation\ IS\ supported' "${CERT}" ; then
+        # we just check the insecure renegotiation if the connection was not using TLS 1.3
+        # we could connect again with -no_tls1_3 and check
+        
+        if ascii_grep '^Secure\ Renegotiation\ IS\ NOT' "${CERT}" && ! ascii_grep 'TLSv1.3' "${CERT}" ; then
             prepend_critical_message 'TLS secure renegotiation is supported'
         fi
         
